--- a/Thanks
+++ b/Thanks
@@ -4,6 +4,8 @@ Arcemu
 LOE DATABASE
 Magnifikator - https://github.com/
 Realion Emu
+TrinityCore
+Jeutie from where i got full creature_proto_vehicle
 
 
 
