--- a/Thanks
+++ b/Thanks
@@ -5,7 +5,7 @@ LOE DATABASE
 Magnifikator - https://github.com/
 Realion Emu
 TrinityCore
-Jeutie from where i got full creature_proto_vehicle
+Jeutie db from where i got full creature_proto_vehicle
 
 
 
