--- a/Thanks
+++ b/Thanks
@@ -2,8 +2,7 @@ arcticdev
 Ascent
 Arcemu
 LOE DATABASE
-Magnifikator - https://github.com/
-Realion Emu
+Magnifikator - for most DK quest included
 TrinityCore
 Jeutie db from where i got full creature_proto_vehicle
 
