--- a/Thanks
+++ b/Thanks
@@ -8,7 +8,7 @@ Jeutie db from where i got full creature_proto_vehicle
 
 
 
-Project developer: Abd-ulRahman - http://www.arcemu.org/, b-Mind - https://github.com/
+Project developer: Abd-ulRahman - http://www.arcemu.org/, WooW - https://github.com/
 Current project helpers:
 Abd-ulRahman
 
